--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "3.x",
+    "nodemailer": "^0.7.1",
     "socket.io": "latest"
   },
   "engines": {
@@ -10,4 +11,3 @@
     "npm": "1.1.x"
   }
 }
-
