--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "node-chat",
+  "name": "gameserver",
   "version": "0.0.1",
+  "description": "ein gameserver mit Node.js",
+  "author": "tuttas.de",
   "dependencies": {
-    "express": "3.x",
+    "express": "3.0.x",
     "nodemailer": "^0.7.1",
-    "socket.io": "latest"
+    "socket.io": "latest",
+	"mysql": "latest"
   },
   "engines": {
     "node": "0.8.x",
